tests/test_exception/good/unsorted_unlabeled_exceptions.catala_en
## Test

```catala
declaration scope A:
  context output x content integer
  context output y content integer

scope A:
  exception
  definition x equals 1

  exception
  definition y equals 2

  definition x equals 0

  definition y equals 3
```



```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [55/55]
[RESULT] Invariant match_inversion checked. result: [0/0]
[RESULT] Invariant app_inversion checked. result: [2/2]
[RESULT] Invariant no_return_a_function checked. result: [0/0]
[RESULT] Invariant no_partial_evaluation checked. result: [2/2]
[RESULT] Invariant default_no_arrow checked. result: [12/12]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Interpret -s A
[RESULT] Computation successful! Results:
[RESULT] x = 1
[RESULT] y = 2
```
```catala-test-inline
$ catala Interpret_Lcalc -s A --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] x = 1
[RESULT] y = 2
```
